--- a/gradle.properties
+++ b/gradle.properties
@@ -27,9 +27,10 @@ encoding=UTF-8
 #===================================
 #   Dependencies Versions
 #===================================
+nettyVersion=4.1.89.Final
 springCloudVersion=2020.0.5
 springBootVersion=2.4.13
 alibabaCloudVersion=2021.1
-log4j2Version=2.17.2
+log4j2Version=2.20.0
 graalvmVersion=22.0.0.2
-icu4jVersion=70.1
+icu4jVersion=72.1
