--- a/tny-game-net-demo/build.gradle
+++ b/tny-game-net-demo/build.gradle
@@ -1,13 +1,11 @@
-ext.springBoot = true
-
-buildscript {
-    dependencyManagement {
-        imports {
-            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
-        }
-    }
-}
+//buildscript {
+//    dependencyManagement {
+//        imports {
+//            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+//            mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+//        }
+//    }
+//}
 
 dependencies {
 
