--- a/tny-game-net-netty4/build.gradle
+++ b/tny-game-net-netty4/build.gradle
@@ -4,7 +4,9 @@ apply plugin: "maven-publish"
 
 dependencies {
 
-    api libs.netty
+    api libs.netty_handler
+    api libs.netty_transport
+    api libs.netty_transport_classes_epoll
     api libs.disruptor
     api libs.jprotobuf
     api project(":tny-game-net")
