--- a/tny-game-starter-basics/build.gradle
+++ b/tny-game-starter-basics/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     api project(":tny-game-common-scheduler")
 
     compileOnly project(":tny-game-data-mongodb")
-    compileOnly project(":tny-game-starter-data")
+//    compileOnly project(":tny-game-starter-data")
 
 //    api project(":tny-game-expr-mvel")
 //    api project(":tny-game-net-netty4")
