--- a/tny-game-starter-redisson/build.gradle
+++ b/tny-game-starter-redisson/build.gradle
@@ -9,7 +9,9 @@ dependencies {
 
 //    api libs.spring_boot_autoconfigure
     api(libs.redisson_spring_boot_starter) {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
+        exclude module: 'spring-boot-starter-web'
+        exclude module: 'spring-boot-starter-logging'
+        exclude module: 'log4j-to-slf4j'
     }
 
     api project(":tny-game-boot")
